# vecs

./: Cargo.toml  README.md  rustfmt.toml
derive_display_hash/: Cargo.toml  README.md
derive_display_hash/src/: lib.rs
display_hash/: Cargo.toml  README.md
display_hash/src/: lib.rs
examples/: test.vecs
include/: vecs.h
src/: cli.rs  main.rs
src/parse/: comments.rs  components.rs  events.rs  mod.rs  systems.rs
src/parse/basic/: identifiers.rs  mod.rs  str.rs
src/parse/data/: result.rs  src.rs  str.rs
vecs_cli/: .gitignore  Cargo.toml  TODO.md
vecs_cli/examples/: test.c  test.h  test.vecs
vecs_cli/src/: cli.rs  common.rs  main.rs
vecs_cli/src/generate/: common.rs  constants.rs  header.rs  imple.rs  masks.rs  mod.rs
vecs_cli/src/generate/generics/: common.rs  dyn_arrays.rs  dyn_queue.rs  hash_dyn_arrays.rs  mod.rs  skip_lists.rs  sparse_dyn_arrays.rs
vecs_cli/src/parse/: ast.rs  comments.rs  components.rs  events.rs  function_like.rs  mod.rs  struct_def_like.rs  struct_like.rs  systems.rs
vecs_cli/src/parse/basic/: identifiers.rs  mod.rs  regex.rs  str.rs
vecs_cli/src/parse/data/: mod.rs  result.rs  src.rs  str.rs
vecs_cli/src/parse/expressions/: application.rs  common.rs  integer.rs  list.rs  mod.rs  string.rs  symbol.rs  table.rs  variable.rs
vecs_cli/src/parse/util/: identifiers.rs  regex.rs  str.rs
vecs_cli/src/resolve/: component.rs  cst.rs  event.rs  global.rs  include.rs  mod.rs  node.rs  result.rs  setting.rs  state.rs  strukt.rs  system.rs  values.rs
vecs_cli/tests/: data_structures.c  test.c
vecs_gen/: Cargo.toml
(+2 files in other folders)
