[package]
name = "vecs_cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
derive_builder = "0.20.2"
educe = { version = "0.6.0", default-features = false, features = ["PartialEq"] }
md5 = "0.8.0"
regex = "1.12.2"

[dev-dependencies]
derive_builder = "0.20.2"
