[package]
name = "vecs_cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
derive_builder = "0.20.2"
educe = { version = "0.6.0", default-features = false, features = ["PartialEq"] }
regex = "1.12.2"
derive_display_hash = { path = "../derive_display_hash/" }
display_hash = { path = "../display_hash/" }

[dev-dependencies]
derive_builder = "0.20.2"
